# APIsArchitecture

./: README.md
GraphQL/: GraphQL.cpp  main.cpp
RESTful/: main.cpp
SOAP/: client.cpp  server.cpp  services.h
WebSocket/: CMakeLists.txt  install_uwebsockets.sh  server.cpp
Webhook/: CMakeLists.txt  serverWebhook.cpp
gRPC/: CMakeLists.txt  client.cpp  server.cpp
gRPC/proto/: add_numbers.proto
